parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    TRUE
    FALSE
    TBOOL
    THASH

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM bloque ENDPROGRAM
Rule 2     programa -> PROGRAM bloque funciones ENDPROGRAM
Rule 3     programa -> PROGRAM global bloque funciones ENDPROGRAM
Rule 4     programa -> PROGRAM global bloque ENDPROGRAM
Rule 5     funciones -> func funciones
Rule 6     funciones -> voidfunc funciones
Rule 7     funciones -> empty
Rule 8     vars -> VAR vars_list ENDVAR
Rule 9     global -> GLOBAL vars_list ENDGLOBAL
Rule 10    vars_list -> vars_declaration vars_list
Rule 11    vars_list -> vars_declaration
Rule 12    vars_list -> empty
Rule 13    vars_declaration -> tipo identifier
Rule 14    tipo -> TINT
Rule 15    tipo -> TFLOAT
Rule 16    tipo -> TSTRING
Rule 17    tipo -> VOID
Rule 18    bloque -> BLOQUE estatuto_list ENDBLOQUE
Rule 19    estatuto_list -> estatuto estatuto_list
Rule 20    estatuto_list -> estatuto
Rule 21    estatuto_list -> empty
Rule 22    estatuto -> asignacion
Rule 23    estatuto -> condicion
Rule 24    estatuto -> escritura
Rule 25    estatuto -> lectura
Rule 26    estatuto -> while
Rule 27    estatuto -> for
Rule 28    estatuto -> vars
Rule 29    asignacion -> identifier EQUAL expresion
Rule 30    escritura -> PRINT escritura_vars
Rule 31    escritura_vars -> expresion COMMA escritura_vars
Rule 32    escritura_vars -> expresion
Rule 33    lectura -> READ identifier
Rule 34    condicion -> IF expresion estatuto_list elseif ENDIF
Rule 35    condicion -> IF expresion estatuto_list elseif ELSE estatuto_list ENDIF
Rule 36    condicion -> IF expresion estatuto_list ELSE estatuto_list ENDIF
Rule 37    condicion -> IF expresion estatuto_list ENDIF
Rule 38    elseif -> ELSEIF expresion estatuto_list
Rule 39    while -> WHILE expresion estatuto_list ENDWHILE
Rule 40    for -> FOR int estatuto_list ENDFOR
Rule 41    expresion -> termino
Rule 42    expresion -> expresion and_or termino
Rule 43    termino -> factor
Rule 44    termino -> termino sign factor
Rule 45    factor -> elemento
Rule 46    factor -> factor psign elemento
Rule 47    sign -> LTHAN
Rule 48    sign -> GTHAN
Rule 49    sign -> EQUALTO
Rule 50    sign -> GTHANEQ
Rule 51    sign -> LTHANEQ
Rule 52    sign -> NOTEQUAL
Rule 53    sign -> PLUS
Rule 54    sign -> MINUS
Rule 55    psign -> MULTI
Rule 56    psign -> DIVIDE
Rule 57    and_or -> AND
Rule 58    and_or -> OR
Rule 59    elemento -> identifier
Rule 60    elemento -> int
Rule 61    elemento -> float
Rule 62    elemento -> string
Rule 63    elemento -> LPARENTHESES expresion RPARENTHESES
Rule 64    elemento -> llamarfun
Rule 65    func -> funchead bloque RETURN identifier ENDMETHOD
Rule 66    voidfunc -> prochead bloque ENDMETHOD
Rule 67    prochead -> METHOD VOID identifier parameter_list
Rule 68    prochead -> METHOD VOID identifier
Rule 69    funchead -> METHOD tipo identifier parameter_list
Rule 70    funchead -> METHOD tipo identifier
Rule 71    parameter_list -> parameter
Rule 72    parameter_list -> parameter COMMA parameter_list
Rule 73    parameter -> tipo identifier
Rule 74    parameter -> tipo referencia
Rule 75    llamarfun -> CALLMETHOD identifier funparams
Rule 76    llamarfun -> CALLMETHOD identifier
Rule 77    funparams -> expresion
Rule 78    funparams -> expresion COMMA funparams
Rule 79    empty -> <empty>
Rule 80    identifier -> IDENTIFIER
Rule 81    referencia -> REFERENCIA
Rule 82    int -> INT
Rule 83    float -> FLOAT
Rule 84    string -> STRING

Terminals, with rules where they appear

AND                  : 57
BLOQUE               : 18
CALLMETHOD           : 75 76
COMMA                : 31 72 78
DIVIDE               : 56
ELSE                 : 35 36
ELSEIF               : 38
ENDBLOQUE            : 18
ENDFOR               : 40
ENDGLOBAL            : 9
ENDIF                : 34 35 36 37
ENDMETHOD            : 65 66
ENDPROGRAM           : 1 2 3 4
ENDVAR               : 8
ENDWHILE             : 39
EQUAL                : 29
EQUALTO              : 49
FALSE                : 
FLOAT                : 83
FOR                  : 40
GLOBAL               : 9
GTHAN                : 48
GTHANEQ              : 50
IDENTIFIER           : 80
IF                   : 34 35 36 37
INT                  : 82
LPARENTHESES         : 63
LTHAN                : 47
LTHANEQ              : 51
METHOD               : 67 68 69 70
MINUS                : 54
MULTI                : 55
NOTEQUAL             : 52
OR                   : 58
PLUS                 : 53
PRINT                : 30
PROGRAM              : 1 2 3 4
READ                 : 33
REFERENCIA           : 81
RETURN               : 65
RPARENTHESES         : 63
STRING               : 84
TBOOL                : 
TFLOAT               : 15
THASH                : 
TINT                 : 14
TRUE                 : 
TSTRING              : 16
VAR                  : 8
VOID                 : 17 67 68
WHILE                : 39
error                : 

Nonterminals, with rules where they appear

and_or               : 42
asignacion           : 22
bloque               : 1 2 3 4 65 66
condicion            : 23
elemento             : 45 46
elseif               : 34 35
empty                : 7 12 21
escritura            : 24
escritura_vars       : 30 31
estatuto             : 19 20
estatuto_list        : 18 19 34 35 35 36 36 37 38 39 40
expresion            : 29 31 32 34 35 36 37 38 39 42 63 77 78
factor               : 43 44 46
float                : 61
for                  : 27
func                 : 5
funchead             : 65
funciones            : 2 3 5 6
funparams            : 75 78
global               : 3 4
identifier           : 13 29 33 59 65 67 68 69 70 73 75 76
int                  : 40 60
lectura              : 25
llamarfun            : 64
parameter            : 71 72
parameter_list       : 67 69 72
prochead             : 66
programa             : 0
psign                : 46
referencia           : 74
sign                 : 44
string               : 62
termino              : 41 42 44
tipo                 : 13 69 70 73 74
vars                 : 28
vars_declaration     : 10 11
vars_list            : 8 9 10
voidfunc             : 6
while                : 26

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM bloque ENDPROGRAM
    (2) programa -> . PROGRAM bloque funciones ENDPROGRAM
    (3) programa -> . PROGRAM global bloque funciones ENDPROGRAM
    (4) programa -> . PROGRAM global bloque ENDPROGRAM

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . bloque ENDPROGRAM
    (2) programa -> PROGRAM . bloque funciones ENDPROGRAM
    (3) programa -> PROGRAM . global bloque funciones ENDPROGRAM
    (4) programa -> PROGRAM . global bloque ENDPROGRAM
    (18) bloque -> . BLOQUE estatuto_list ENDBLOQUE
    (9) global -> . GLOBAL vars_list ENDGLOBAL

    BLOQUE          shift and go to state 3
    GLOBAL          shift and go to state 6

    global                         shift and go to state 5
    bloque                         shift and go to state 4

state 2

    (0) S' -> programa .



state 3

    (18) bloque -> BLOQUE . estatuto_list ENDBLOQUE
    (19) estatuto_list -> . estatuto estatuto_list
    (20) estatuto_list -> . estatuto
    (21) estatuto_list -> . empty
    (22) estatuto -> . asignacion
    (23) estatuto -> . condicion
    (24) estatuto -> . escritura
    (25) estatuto -> . lectura
    (26) estatuto -> . while
    (27) estatuto -> . for
    (28) estatuto -> . vars
    (79) empty -> .
    (29) asignacion -> . identifier EQUAL expresion
    (34) condicion -> . IF expresion estatuto_list elseif ENDIF
    (35) condicion -> . IF expresion estatuto_list elseif ELSE estatuto_list ENDIF
    (36) condicion -> . IF expresion estatuto_list ELSE estatuto_list ENDIF
    (37) condicion -> . IF expresion estatuto_list ENDIF
    (30) escritura -> . PRINT escritura_vars
    (33) lectura -> . READ identifier
    (39) while -> . WHILE expresion estatuto_list ENDWHILE
    (40) for -> . FOR int estatuto_list ENDFOR
    (8) vars -> . VAR vars_list ENDVAR
    (80) identifier -> . IDENTIFIER

    ENDBLOQUE       reduce using rule 79 (empty -> .)
    IF              shift and go to state 24
    PRINT           shift and go to state 9
    READ            shift and go to state 17
    WHILE           shift and go to state 16
    FOR             shift and go to state 7
    VAR             shift and go to state 11
    IDENTIFIER      shift and go to state 14

    asignacion                     shift and go to state 8
    empty                          shift and go to state 18
    while                          shift and go to state 10
    identifier                     shift and go to state 21
    lectura                        shift and go to state 19
    estatuto                       shift and go to state 12
    for                            shift and go to state 20
    estatuto_list                  shift and go to state 13
    vars                           shift and go to state 22
    condicion                      shift and go to state 23
    escritura                      shift and go to state 15

state 4

    (1) programa -> PROGRAM bloque . ENDPROGRAM
    (2) programa -> PROGRAM bloque . funciones ENDPROGRAM
    (5) funciones -> . func funciones
    (6) funciones -> . voidfunc funciones
    (7) funciones -> . empty
    (65) func -> . funchead bloque RETURN identifier ENDMETHOD
    (66) voidfunc -> . prochead bloque ENDMETHOD
    (79) empty -> .
    (69) funchead -> . METHOD tipo identifier parameter_list
    (70) funchead -> . METHOD tipo identifier
    (67) prochead -> . METHOD VOID identifier parameter_list
    (68) prochead -> . METHOD VOID identifier

  ! shift/reduce conflict for ENDPROGRAM resolved as shift
    ENDPROGRAM      shift and go to state 27
    METHOD          shift and go to state 25

  ! ENDPROGRAM      [ reduce using rule 79 (empty -> .) ]

    voidfunc                       shift and go to state 29
    empty                          shift and go to state 26
    funciones                      shift and go to state 30
    func                           shift and go to state 31
    funchead                       shift and go to state 28
    prochead                       shift and go to state 32

state 5

    (3) programa -> PROGRAM global . bloque funciones ENDPROGRAM
    (4) programa -> PROGRAM global . bloque ENDPROGRAM
    (18) bloque -> . BLOQUE estatuto_list ENDBLOQUE

    BLOQUE          shift and go to state 3

    bloque                         shift and go to state 33

state 6

    (9) global -> GLOBAL . vars_list ENDGLOBAL
    (10) vars_list -> . vars_declaration vars_list
    (11) vars_list -> . vars_declaration
    (12) vars_list -> . empty
    (13) vars_declaration -> . tipo identifier
    (79) empty -> .
    (14) tipo -> . TINT
    (15) tipo -> . TFLOAT
    (16) tipo -> . TSTRING
    (17) tipo -> . VOID

    ENDGLOBAL       reduce using rule 79 (empty -> .)
    TINT            shift and go to state 40
    TFLOAT          shift and go to state 37
    TSTRING         shift and go to state 36
    VOID            shift and go to state 39

    vars_list                      shift and go to state 38
    tipo                           shift and go to state 34
    empty                          shift and go to state 35
    vars_declaration               shift and go to state 41

state 7

    (40) for -> FOR . int estatuto_list ENDFOR
    (82) int -> . INT

    INT             shift and go to state 43

    int                            shift and go to state 42

state 8

    (22) estatuto -> asignacion .

    IF              reduce using rule 22 (estatuto -> asignacion .)
    PRINT           reduce using rule 22 (estatuto -> asignacion .)
    READ            reduce using rule 22 (estatuto -> asignacion .)
    WHILE           reduce using rule 22 (estatuto -> asignacion .)
    FOR             reduce using rule 22 (estatuto -> asignacion .)
    VAR             reduce using rule 22 (estatuto -> asignacion .)
    IDENTIFIER      reduce using rule 22 (estatuto -> asignacion .)
    ENDIF           reduce using rule 22 (estatuto -> asignacion .)
    ENDFOR          reduce using rule 22 (estatuto -> asignacion .)
    ELSE            reduce using rule 22 (estatuto -> asignacion .)
    ENDBLOQUE       reduce using rule 22 (estatuto -> asignacion .)
    ENDWHILE        reduce using rule 22 (estatuto -> asignacion .)
    ELSEIF          reduce using rule 22 (estatuto -> asignacion .)


state 9

    (30) escritura -> PRINT . escritura_vars
    (31) escritura_vars -> . expresion COMMA escritura_vars
    (32) escritura_vars -> . expresion
    (41) expresion -> . termino
    (42) expresion -> . expresion and_or termino
    (43) termino -> . factor
    (44) termino -> . termino sign factor
    (45) factor -> . elemento
    (46) factor -> . factor psign elemento
    (59) elemento -> . identifier
    (60) elemento -> . int
    (61) elemento -> . float
    (62) elemento -> . string
    (63) elemento -> . LPARENTHESES expresion RPARENTHESES
    (64) elemento -> . llamarfun
    (80) identifier -> . IDENTIFIER
    (82) int -> . INT
    (83) float -> . FLOAT
    (84) string -> . STRING
    (75) llamarfun -> . CALLMETHOD identifier funparams
    (76) llamarfun -> . CALLMETHOD identifier

    LPARENTHESES    shift and go to state 50
    IDENTIFIER      shift and go to state 14
    INT             shift and go to state 43
    FLOAT           shift and go to state 56
    STRING          shift and go to state 57
    CALLMETHOD      shift and go to state 45

    termino                        shift and go to state 51
    escritura_vars                 shift and go to state 52
    float                          shift and go to state 44
    string                         shift and go to state 48
    expresion                      shift and go to state 46
    int                            shift and go to state 53
    factor                         shift and go to state 47
    identifier                     shift and go to state 54
    elemento                       shift and go to state 55
    llamarfun                      shift and go to state 49

state 10

    (26) estatuto -> while .

    IF              reduce using rule 26 (estatuto -> while .)
    PRINT           reduce using rule 26 (estatuto -> while .)
    READ            reduce using rule 26 (estatuto -> while .)
    WHILE           reduce using rule 26 (estatuto -> while .)
    FOR             reduce using rule 26 (estatuto -> while .)
    VAR             reduce using rule 26 (estatuto -> while .)
    IDENTIFIER      reduce using rule 26 (estatuto -> while .)
    ENDIF           reduce using rule 26 (estatuto -> while .)
    ENDFOR          reduce using rule 26 (estatuto -> while .)
    ELSE            reduce using rule 26 (estatuto -> while .)
    ENDBLOQUE       reduce using rule 26 (estatuto -> while .)
    ENDWHILE        reduce using rule 26 (estatuto -> while .)
    ELSEIF          reduce using rule 26 (estatuto -> while .)


state 11

    (8) vars -> VAR . vars_list ENDVAR
    (10) vars_list -> . vars_declaration vars_list
    (11) vars_list -> . vars_declaration
    (12) vars_list -> . empty
    (13) vars_declaration -> . tipo identifier
    (79) empty -> .
    (14) tipo -> . TINT
    (15) tipo -> . TFLOAT
    (16) tipo -> . TSTRING
    (17) tipo -> . VOID

    ENDVAR          reduce using rule 79 (empty -> .)
    TINT            shift and go to state 40
    TFLOAT          shift and go to state 37
    TSTRING         shift and go to state 36
    VOID            shift and go to state 39

    vars_list                      shift and go to state 58
    tipo                           shift and go to state 34
    empty                          shift and go to state 35
    vars_declaration               shift and go to state 41

state 12

    (19) estatuto_list -> estatuto . estatuto_list
    (20) estatuto_list -> estatuto .
    (19) estatuto_list -> . estatuto estatuto_list
    (20) estatuto_list -> . estatuto
    (21) estatuto_list -> . empty
    (22) estatuto -> . asignacion
    (23) estatuto -> . condicion
    (24) estatuto -> . escritura
    (25) estatuto -> . lectura
    (26) estatuto -> . while
    (27) estatuto -> . for
    (28) estatuto -> . vars
    (79) empty -> .
    (29) asignacion -> . identifier EQUAL expresion
    (34) condicion -> . IF expresion estatuto_list elseif ENDIF
    (35) condicion -> . IF expresion estatuto_list elseif ELSE estatuto_list ENDIF
    (36) condicion -> . IF expresion estatuto_list ELSE estatuto_list ENDIF
    (37) condicion -> . IF expresion estatuto_list ENDIF
    (30) escritura -> . PRINT escritura_vars
    (33) lectura -> . READ identifier
    (39) while -> . WHILE expresion estatuto_list ENDWHILE
    (40) for -> . FOR int estatuto_list ENDFOR
    (8) vars -> . VAR vars_list ENDVAR
    (80) identifier -> . IDENTIFIER

  ! reduce/reduce conflict for ENDBLOQUE resolved using rule 20 (estatuto_list -> estatuto .)
  ! reduce/reduce conflict for ENDFOR resolved using rule 20 (estatuto_list -> estatuto .)
  ! reduce/reduce conflict for ENDWHILE resolved using rule 20 (estatuto_list -> estatuto .)
  ! reduce/reduce conflict for ELSE resolved using rule 20 (estatuto_list -> estatuto .)
  ! reduce/reduce conflict for ENDIF resolved using rule 20 (estatuto_list -> estatuto .)
  ! reduce/reduce conflict for ELSEIF resolved using rule 20 (estatuto_list -> estatuto .)
    ENDBLOQUE       reduce using rule 20 (estatuto_list -> estatuto .)
    ENDFOR          reduce using rule 20 (estatuto_list -> estatuto .)
    ENDIF           reduce using rule 20 (estatuto_list -> estatuto .)
    ENDWHILE        reduce using rule 20 (estatuto_list -> estatuto .)
    ELSE            reduce using rule 20 (estatuto_list -> estatuto .)
    ELSEIF          reduce using rule 20 (estatuto_list -> estatuto .)
    IF              shift and go to state 24
    PRINT           shift and go to state 9
    READ            shift and go to state 17
    WHILE           shift and go to state 16
    FOR             shift and go to state 7
    VAR             shift and go to state 11
    IDENTIFIER      shift and go to state 14

  ! ENDBLOQUE       [ reduce using rule 79 (empty -> .) ]
  ! ENDFOR          [ reduce using rule 79 (empty -> .) ]
  ! ENDWHILE        [ reduce using rule 79 (empty -> .) ]
  ! ELSE            [ reduce using rule 79 (empty -> .) ]
  ! ENDIF           [ reduce using rule 79 (empty -> .) ]
  ! ELSEIF          [ reduce using rule 79 (empty -> .) ]

    asignacion                     shift and go to state 8
    empty                          shift and go to state 18
    while                          shift and go to state 10
    identifier                     shift and go to state 21
    lectura                        shift and go to state 19
    estatuto                       shift and go to state 12
    for                            shift and go to state 20
    estatuto_list                  shift and go to state 59
    vars                           shift and go to state 22
    condicion                      shift and go to state 23
    escritura                      shift and go to state 15

state 13

    (18) bloque -> BLOQUE estatuto_list . ENDBLOQUE

    ENDBLOQUE       shift and go to state 60


state 14

    (80) identifier -> IDENTIFIER .

    EQUAL           reduce using rule 80 (identifier -> IDENTIFIER .)
    MULTI           reduce using rule 80 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 80 (identifier -> IDENTIFIER .)
    LTHAN           reduce using rule 80 (identifier -> IDENTIFIER .)
    GTHAN           reduce using rule 80 (identifier -> IDENTIFIER .)
    EQUALTO         reduce using rule 80 (identifier -> IDENTIFIER .)
    GTHANEQ         reduce using rule 80 (identifier -> IDENTIFIER .)
    LTHANEQ         reduce using rule 80 (identifier -> IDENTIFIER .)
    NOTEQUAL        reduce using rule 80 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 80 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 80 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 80 (identifier -> IDENTIFIER .)
    AND             reduce using rule 80 (identifier -> IDENTIFIER .)
    OR              reduce using rule 80 (identifier -> IDENTIFIER .)
    IF              reduce using rule 80 (identifier -> IDENTIFIER .)
    PRINT           reduce using rule 80 (identifier -> IDENTIFIER .)
    READ            reduce using rule 80 (identifier -> IDENTIFIER .)
    WHILE           reduce using rule 80 (identifier -> IDENTIFIER .)
    FOR             reduce using rule 80 (identifier -> IDENTIFIER .)
    VAR             reduce using rule 80 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 80 (identifier -> IDENTIFIER .)
    ENDBLOQUE       reduce using rule 80 (identifier -> IDENTIFIER .)
    ENDFOR          reduce using rule 80 (identifier -> IDENTIFIER .)
    ENDWHILE        reduce using rule 80 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 80 (identifier -> IDENTIFIER .)
    ENDIF           reduce using rule 80 (identifier -> IDENTIFIER .)
    ELSEIF          reduce using rule 80 (identifier -> IDENTIFIER .)
    RPARENTHESES    reduce using rule 80 (identifier -> IDENTIFIER .)
    LPARENTHESES    reduce using rule 80 (identifier -> IDENTIFIER .)
    INT             reduce using rule 80 (identifier -> IDENTIFIER .)
    FLOAT           reduce using rule 80 (identifier -> IDENTIFIER .)
    STRING          reduce using rule 80 (identifier -> IDENTIFIER .)
    CALLMETHOD      reduce using rule 80 (identifier -> IDENTIFIER .)
    TINT            reduce using rule 80 (identifier -> IDENTIFIER .)
    TFLOAT          reduce using rule 80 (identifier -> IDENTIFIER .)
    TSTRING         reduce using rule 80 (identifier -> IDENTIFIER .)
    VOID            reduce using rule 80 (identifier -> IDENTIFIER .)
    ENDGLOBAL       reduce using rule 80 (identifier -> IDENTIFIER .)
    ENDVAR          reduce using rule 80 (identifier -> IDENTIFIER .)
    ENDMETHOD       reduce using rule 80 (identifier -> IDENTIFIER .)
    BLOQUE          reduce using rule 80 (identifier -> IDENTIFIER .)


state 15

    (24) estatuto -> escritura .

    IF              reduce using rule 24 (estatuto -> escritura .)
    PRINT           reduce using rule 24 (estatuto -> escritura .)
    READ            reduce using rule 24 (estatuto -> escritura .)
    WHILE           reduce using rule 24 (estatuto -> escritura .)
    FOR             reduce using rule 24 (estatuto -> escritura .)
    VAR             reduce using rule 24 (estatuto -> escritura .)
    IDENTIFIER      reduce using rule 24 (estatuto -> escritura .)
    ENDIF           reduce using rule 24 (estatuto -> escritura .)
    ENDFOR          reduce using rule 24 (estatuto -> escritura .)
    ELSE            reduce using rule 24 (estatuto -> escritura .)
    ENDBLOQUE       reduce using rule 24 (estatuto -> escritura .)
    ENDWHILE        reduce using rule 24 (estatuto -> escritura .)
    ELSEIF          reduce using rule 24 (estatuto -> escritura .)


state 16

    (39) while -> WHILE . expresion estatuto_list ENDWHILE
    (41) expresion -> . termino
    (42) expresion -> . expresion and_or termino
    (43) termino -> . factor
    (44) termino -> . termino sign factor
    (45) factor -> . elemento
    (46) factor -> . factor psign elemento
    (59) elemento -> . identifier
    (60) elemento -> . int
    (61) elemento -> . float
    (62) elemento -> . string
    (63) elemento -> . LPARENTHESES expresion RPARENTHESES
    (64) elemento -> . llamarfun
    (80) identifier -> . IDENTIFIER
    (82) int -> . INT
    (83) float -> . FLOAT
    (84) string -> . STRING
    (75) llamarfun -> . CALLMETHOD identifier funparams
    (76) llamarfun -> . CALLMETHOD identifier

    LPARENTHESES    shift and go to state 50
    IDENTIFIER      shift and go to state 14
    INT             shift and go to state 43
    FLOAT           shift and go to state 56
    STRING          shift and go to state 57
    CALLMETHOD      shift and go to state 45

    termino                        shift and go to state 51
    identifier                     shift and go to state 54
    float                          shift and go to state 44
    string                         shift and go to state 48
    expresion                      shift and go to state 61
    int                            shift and go to state 53
    factor                         shift and go to state 47
    elemento                       shift and go to state 55
    llamarfun                      shift and go to state 49

state 17

    (33) lectura -> READ . identifier
    (80) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 14

    identifier                     shift and go to state 62

state 18

    (21) estatuto_list -> empty .

    ENDBLOQUE       reduce using rule 21 (estatuto_list -> empty .)
    ENDFOR          reduce using rule 21 (estatuto_list -> empty .)
    ENDIF           reduce using rule 21 (estatuto_list -> empty .)
    ENDWHILE        reduce using rule 21 (estatuto_list -> empty .)
    ELSE            reduce using rule 21 (estatuto_list -> empty .)
    ELSEIF          reduce using rule 21 (estatuto_list -> empty .)


state 19

    (25) estatuto -> lectura .

    IF              reduce using rule 25 (estatuto -> lectura .)
    PRINT           reduce using rule 25 (estatuto -> lectura .)
    READ            reduce using rule 25 (estatuto -> lectura .)
    WHILE           reduce using rule 25 (estatuto -> lectura .)
    FOR             reduce using rule 25 (estatuto -> lectura .)
    VAR             reduce using rule 25 (estatuto -> lectura .)
    IDENTIFIER      reduce using rule 25 (estatuto -> lectura .)
    ENDIF           reduce using rule 25 (estatuto -> lectura .)
    ENDFOR          reduce using rule 25 (estatuto -> lectura .)
    ELSE            reduce using rule 25 (estatuto -> lectura .)
    ENDBLOQUE       reduce using rule 25 (estatuto -> lectura .)
    ENDWHILE        reduce using rule 25 (estatuto -> lectura .)
    ELSEIF          reduce using rule 25 (estatuto -> lectura .)


state 20

    (27) estatuto -> for .

    IF              reduce using rule 27 (estatuto -> for .)
    PRINT           reduce using rule 27 (estatuto -> for .)
    READ            reduce using rule 27 (estatuto -> for .)
    WHILE           reduce using rule 27 (estatuto -> for .)
    FOR             reduce using rule 27 (estatuto -> for .)
    VAR             reduce using rule 27 (estatuto -> for .)
    IDENTIFIER      reduce using rule 27 (estatuto -> for .)
    ENDIF           reduce using rule 27 (estatuto -> for .)
    ENDFOR          reduce using rule 27 (estatuto -> for .)
    ELSE            reduce using rule 27 (estatuto -> for .)
    ENDBLOQUE       reduce using rule 27 (estatuto -> for .)
    ENDWHILE        reduce using rule 27 (estatuto -> for .)
    ELSEIF          reduce using rule 27 (estatuto -> for .)


state 21

    (29) asignacion -> identifier . EQUAL expresion

    EQUAL           shift and go to state 63


state 22

    (28) estatuto -> vars .
